# src/schemas/CleaningTask.cs
@@ -6,4 +6,4 @@ using Swashbuckle.AspNetCore.Annotations;
 
 namespace CleanControlBackend.Schemas;
 
-public record CleaningTask([SwaggerSchema(ReadOnly = true)] Guid Id, string name, string? Description, int? recurrenceInterval, bool onCheckout);
+public record CleaningTask([SwaggerSchema(ReadOnly = true)] Guid Id, string name, string? description, int? recurrenceInterval, bool onCheckout);
