# src/schemas/CleaningTeam.cs
@@ -1,9 +1,0 @@
-#region
-
-using Swashbuckle.AspNetCore.Annotations;
-
-#endregion
-
-namespace CleanControlBackend.Schemas;
-
-public record CleaningTeam([SwaggerSchema(ReadOnly = true)] Guid id, string name, IEnumerable<User> cleaners);
