# src/schemas/Product.cs
@@ -6,4 +6,6 @@ using Swashbuckle.AspNetCore.Annotations;
 
 namespace CleanControlBackend.Schemas;
 
-public record Product([SwaggerSchema(ReadOnly = true)] Guid id, string name, int inventoryQuantity);
+public record Product([SwaggerSchema(ReadOnly = true)] Guid id, string name, int inventoryQuantity, byte[]? image) {
+	public Product(Guid id, string name, int inventoryQuantity) : this(id, name, inventoryQuantity, null) { }
+};
