# src/schemas/RoomRefill.cs
@@ -7,4 +7,6 @@ using Swashbuckle.AspNetCore.Annotations;
 
 namespace CleanControlBackend.Schemas;
 
-public record RoomRefill([SwaggerSchema(ReadOnly = true)] Product item, [SwaggerSchema(WriteOnly = true)] Guid? id, [Required] int quantity);
+public record RoomRefill([SwaggerSchema(ReadOnly = true)] Product item, [SwaggerSchema(WriteOnly = true)] Guid? id, [Required] int quantity) {
+	public RoomRefill(Product item, int quantity) : this(item, null, quantity) { }
+};
